--- a/ngapp/src/app/dr-story-viewer/dr-story-builder/dr-story-builder.component.scss
+++ b/ngapp/src/app/dr-story-viewer/dr-story-builder/dr-story-builder.component.scss
@@ -129,7 +129,7 @@ span.currentWord {
     // the logic is wrong somewhere here
     min-width: 20px;
     //max-width: 40px;
-    width: 15%;
+    width: 25%;
     //
 
     height: inherit;
@@ -154,7 +154,7 @@ span.currentWord {
     //
 
     //width: 200px;
-    width: 50%;
+    width: 40%;
     //height: 40px;
 }
 
@@ -163,7 +163,18 @@ span.currentWord {
     //position: absolute;
     //right: 5px;
     //
-    width: 50%;
+    width: 40%;
+
+    //width: 50%;
+    //height: 40px;
+}
+
+.Toolbar > .instructionsContainer {
+    // These two attributes go together
+    //position: absolute;
+    //right: 5px;
+    //
+    width: 20%;
 
     //width: 50%;
     //height: 40px;
@@ -178,7 +189,7 @@ span.currentWord {
 
     font-size: 20px;
 
-    width: 70%;
+    width: 85%;
     //min-width: 200px;
     //min-width: 100px;
 
@@ -213,6 +224,34 @@ span.currentWord {
 
 .pause {
     font-size: 20px;
+}
+
+.Toolbar > .instructionsContainer > button {
+    border: none;
+    background-color: white;
+    color: var(--scealai-green);
+    vertical-align: middle;
+
+
+    // the logic is wrong somewhere here
+    min-width: 20px;
+    //max-width: 40px;
+    width: 40%;
+    //
+
+    height: inherit;
+
+    margin-right: 5px;
+    margin-left: 5px;
+
+    margin-top: 10px;
+    margin-bottom: 10px;
+    
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+
+    border-radius: 5px;
 }
 
 .voiceSelection {
