--- a/ngapp/src/app/nav-bar/digital-reader/digital-reader.component.html
+++ b/ngapp/src/app/nav-bar/digital-reader/digital-reader.component.html
@@ -155,6 +155,10 @@
 <!-- Footer containing logos -->
 <div class="footerLARA">
   <div class="footerLogos">
+    <div class="copyright"> {{ts.l.funded_by}} </div>
+    <div class="logoPadding"><img class="logoImg" src="assets/img/logo_cogg.png"></div>
+  </div>
+  <div class="footerLogos">
     <div class="copyright"> {{ts.l.published_courtesy_of}} </div>
     <div class="logoPadding"><img class="logoImg" src="assets/img/logo_an_gum.png"></div>
     <div class="logoPadding"><img class="logoImg" src="assets/img/logo_foras_na_gaeilge.png"></div>
